<resources>
    <string name="app_name">Box for Root</string>
    <string name="app_version">2.0.8-beta.1</string>
    <!-- BaseActivity -->
    <string name="min_module_version">20230801</string>
    <string name="need_install_module">please install the Box for Root module first and give root permission!</string>
    <string name="need_update_module">please update your Box for Root module to at least %s !</string>
    <string name="module_repo_url">https://github.com/taamarin/box_for_magisk</string>
    <string name="release_repo_url">https://github.com/taamarin/box_for_magisk/releases</string>
    <string name="wait">please wait…</string>

    <!-- Config Editor -->
    <string name="config_title">config editor</string>
    <string name="config_summary">edit your config here</string>

    <!-- App list -->
    <string name="menu_show_games">games</string>
    <string name="menu_show_system_apps">system apps</string>
    <string name="menu_sort">sort by…</string>
    <string name="sort_by_name">sort by name</string>
    <string name="sort_by_name_reverse">sort by name(reverse)</string>
    <string name="sort_by_package_name">sort by package name</string>
    <string name="sort_by_package_name_reverse">sort by package name(reverse)</string>
    <string name="sort_by_install_time">sort by install time</string>
    <string name="sort_by_install_time_reverse">sort by install time(reverse)</string>
    <string name="sort_by_update_time">sort by update time</string>
    <string name="sort_by_update_time_reverse">sort by update time(reverse)</string>
    <string name="only_work">notes: for CLASH only works on redir-host</string>

    <!-- Main Activity -->
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="install_required">module install is required</string>
    <string name="Apps">apps</string>
    <string name="sett">settings</string>
    <string name="settsum">customize your setting</string>
    <string name="dash">dashboard</string>
    <string name="dashsum">check your configuration</string>
    <string name="Logs">logs</string>
    <string name="Settings">settings</string>
    <string name="About">about</string>
    <string name="app_count_in_list">added %d apps in %s</string>
    <string name="whitelist">whitelist</string>
    <string name="blacklist">blacklist</string>
    <string name="update">update available!</string>
    <string name="updatesum">new update module avalaible : v%s</string>

    <!-- AppList Activity -->
    <string name="enable_whitelist">whitelist mode</string>
    <string name="applist_title">list</string>
    <string name="applist_subtitle">select app to bypass/proxy</string>
    <string name="app_description">%s\nversion: %s</string>
    <string name="applist_app_store">view in app store</string>
    <string name="applist_app_info">app info</string>
    <string name="failed_to_save_proxy_list">failed to save proxy app list</string>
    <string name="failed_to_renew_tproxy_rules">failed to renew tproxy rules</string>
    <string name="succeeded_to_renew_tproxy_rules">succeeded to renew tproxy rules</string>

</resources>
